First Chart started working. Flickering on hover. Chart JS - correct static resource

--- a/src/lwc/mainGraphContainer/mainGraphContainer.html
+++ b/src/lwc/mainGraphContainer/mainGraphContainer.html
@@ -7,23 +7,28 @@
                     icon-name="utility:dayview" 
                     selected={dailyChartSelectedState} 
                     onclick={dailyChartSelected} 
-                    alternative-text="Refresh"></lightning-button-icon>
+                    alternative-text="Daily"></lightning-button-icon>
                 <lightning-button-icon
                     variant="border-filled"
                     icon-name="utility:weeklyview" 
                     selected 
                     onclick={weeklyChartSelected} 
-                    alternative-text="Edit"></lightning-button-icon>
+                    alternative-text="Weekly"></lightning-button-icon>
                 <lightning-button-icon
                     variant="border-filled"
                     icon-name="utility:monthlyview" 
                     selected={monthlyChartSelectedState} 
                     onclick={monthlyChartSelected} 
-                    alternative-text="Save"></lightning-button-icon>
+                    alternative-text="Monthly"></lightning-button-icon>
             </lightning-button-group>
         </div>
         <div class="slds-box slds-box_x-small slds-theme_default">
-            <canvas  lwc:dom="manual" id="pie-chart" class="pie-chart" width="600" height="300"></canvas>
+            <template if:true={isData}>
+                <canvas lwc:dom="manual" id="pie-chart" class="pie-chart" width="600" height="300"></canvas>
+            </template>
+            <template if:false={isData}>
+                <div class="slds-align_absolute-center">No data to display... {noDataCaption}</div>
+            </template>
         </div>
     </div>
 </template>
