--- a/src/lwc/organizerListWrapper/organizerListWrapper.html
+++ b/src/lwc/organizerListWrapper/organizerListWrapper.html
@@ -1,26 +1,21 @@
 <template>
-    <div>
-        <template for:each={items} for:item="item">
-            <div key={item.id} class="slds-theme_default">
-                <div class="slds-grid">
-                    <div class="slds-col slds-size_1-of-12 slds-p-vertical_xxx-small">
-                        <div class="slds-clearfix slds-p-around_xx-small">
-                            <lightning-input 
-                                type="checkbox" 
-                                label={noLabelValue} 
-                                name="input1">
-                            </lightning-input>
-                        </div>
-                    </div>
-                    <div class="slds-col slds-size_11-of-12 slds-p-vertical_xxx-small">
-                        <lightning-input 
-                            type="text" 
-                            variant="label-hidden"
-                            label={noLabelValue}>
-                        </lightning-input>
-                    </div>
+    
+    <div class="slds-box slds-theme_default ">
+        <lightning-layout multiple-rows>
+            <lightning-layout-item size="4" padding="around-small">
+                <c-check-list-item></c-check-list-item>
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small">
+                <c-check-list-item></c-check-list-item>
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small">
+                <div class="slds-box slds-box_x-small">
+                    <lightning-input-rich-text
+                        value="Value"
+                        formats={formats}>
+                    </lightning-input-rich-text>
                 </div>
-            </div>
-        </template>
+            </lightning-layout-item>
+        </lightning-layout>
     </div>
 </template>
