--- a/src/lwc/organizerListWrapper/organizerListWrapper.html
+++ b/src/lwc/organizerListWrapper/organizerListWrapper.html
@@ -9,12 +9,7 @@
                 <c-check-list-item></c-check-list-item>
             </lightning-layout-item>
             <lightning-layout-item size="4" padding="around-small">
-                <div class="slds-box slds-box_x-small">
-                    <lightning-input-rich-text
-                        value="Value"
-                        formats={formats}>
-                    </lightning-input-rich-text>
-                </div>
+                <c-text-note-item></c-text-note-item>
             </lightning-layout-item>
         </lightning-layout>
     </div>
